--- a/style.css
+++ b/style.css
@@ -6,4 +6,28 @@
 
 body {
   font: 1.2rem/1.6 'Montserrat', sans-serif;
+  background-color: aquamarine;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  border: 0;
+  border-radius: 10px;
+  padding: 1rem 1.5rem;
+}
+
+button {
+  border: 0;
+  border-radius: 5px;
+  background-color: lightskyblue;
+  padding: 1rem 1.5rem;
+}
+
+button:hover {
+  cursor: pointer;
 }
